--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@angular-devkit/build-angular": "~0.1000.4",
     "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "~9.1.9",
-    "@types/node": "^12.12.51",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.51",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -45,6 +45,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.10.1",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.7"
+    "typescript": "^3.8.3"
   }
 }
