--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@digitalascetic/ngx-pica": "^10.0.0",
+    "angularx-social-login": "^3.3.1",
     "bootstrap-scss": "^4.5.2",
     "exifr": "^5.0.3",
     "moment": "^2.27.0",
