--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
+    "@angular/localize": "~9.1.9",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@digitalascetic/ngx-pica": "^10.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "angularx-social-login": "^3.3.1",
+    "bootstrap": "^4.4.0",
     "bootstrap-scss": "^4.5.2",
     "exifr": "^5.0.3",
     "moment": "^2.27.0",
